--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todoapp",
-  "homepage": "https://fuadaliah.github.io/Todo/",
+  "homepage": "https://fuadaliah.github.io/todoapp/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
